--- a/adminview/templates/main.html
+++ b/adminview/templates/main.html
@@ -10,69 +10,119 @@
     </div>
     <div class="flex justify-center mt-4 w-full max-w-7xl p-5">
       <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="btn overflow-x-auto bg-[#f09027] hover:bg-[#b85c2c] text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform hover:scale-101">
-          Add A Product!
+          Tambahkan Produk!
       </button>
+    </div>
+    <div class="flex space-x-4 md:space-x-8" style="margin-left: 150px;">
+      <select id="sortDropdown" class="bg-[#b85c2c] text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform bg-[#f09027] hover:bg-[#b85c2c] hover:scale-101 mt-4">
+          <option value="ascending">Urut Berdasarkan Harga: Naik</option>
+          <option value="descending">Urut Berdasarkan Harga: Turun</option>
+          <option value="atoz">Urut Berdasarkan Alfabet: A - Z</option>
+          <option value="ztoa">Urut Berdasarkan Alfabet: Z - A</option>
+          <option value="newtoold">Urut Berdasarkan Time: Terbaru - Terlama</option>
+          <option value="oldtonew">Urut Berdasarkan Time: Terlama - Terbaru</option>
+      </select>
+      <select id="categoryDropdown" class="bg-[#b85c2c] text-white font-bold py-2 px-4 rounded-lg transition duration-300 ease-in-out transform bg-[#f09027] hover:bg-[#b85c2c] hover:scale-101 mt-4">
+          <option value="all">Semua Kategori</option>
+          <option value="FnB">FnB</option>
+          <option value="Dekorasi">Dekorasi</option>
+          <option value="Pakaian/Kain">Pakaian/Kain</option>
+          <option value="Lulur & Aromateraphy">Lulur & Aromatherapy</option>
+          <option value="Aksesoris">Aksesoris</option>
+      </select>
     </div>
 </div>
 <div id="crudModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-gray-800 bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
   <div id="crudModalContent" class="relative bg-white rounded-lg shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out max-h-screen overflow-y-auto">
     <div class="flex items-center justify-between p-4 border-b rounded-t">
       <h3 class="text-xl font-semibold text-gray-900">
-        Add New Product
+        Tambahkan Produk
       </h3>
       <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" id="closeModalBtn">
         <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414 1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
         </svg>
-        <span class="sr-only">Close modal</span>
+        <span class="sr-only">Tutup</span>
       </button>
     </div>
     <div class="px-6 py-4 space-y-6 form-style ">
       <form id="productForm" enctype="multipart/form-data" method="POST">
         <div class="mb-4">
-          <label for="name" class="block text-sm font-medium text-gray-700">Product Name: </label>
-          <input type="text" id="name" name="name" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product name" required>
+          <label for="name" class="block text-sm font-medium text-gray-700">Nama Produk: </label>
+          <input type="text" id="name" name="name" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Masukkan Nama Produk" required>
         </div>
         <div class="mb-4">
-          <label for="price" class="block text-sm font-medium text-gray-700">Product Price (Rp): </label>
-          <input type="number" id="price" name="price" min="1" max="10000000000000000" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" required>
+          <label for="price" class="block text-sm font-medium text-gray-700">Harga Produk (Rp): </label>
+          <input type="number" id="price" name="price" min="1" max="10000000000000000" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Masukkan Harga Produk" required>
         </div>
         <div class="mb-4">
-          <label for="description" class="block text-sm font-medium text-gray-700">Product Description: </label>
-          <textarea id="description" name="description" rows="3" class="mt-1 block w-full h-52 resize-none border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Describe your item" required></textarea>
+          <label for="description" class="block text-sm font-medium text-gray-700">Deskripsi Produk: </label>
+          <textarea id="description" name="description" rows="3" class="mt-1 block w-full h-52 resize-none border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Deskripsikan Produkmu" required></textarea>
         </div>
         <div class="mb-4">
-          <label for="picture" class="block text-sm font-medium text-gray-700">Product Image: </label>
+          <label for="picture" class="block text-sm font-medium text-gray-700">Gambar Produk: </label>
           <input type="file" id="picture" name="picture" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" accept="image/*">
         </div>
         <div class="mb-4">
-          <label for="location" class="block text-sm font-medium text-gray-700">Embedded G-Maps Link: </label>
-          <input type="text" id="location" name="location" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter product location" required>
+          <label for="location" class="block text-sm font-medium text-gray-700">Google Maps Link (Embed): </label>
+          <input type="text" id="location" name="location" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Masukkan Link G-Maps" required>
         </div>
         <div class="mb-4">
-          <label for="category" class="block text-sm font-medium text-gray-700">Category: </label>
-          <input type="text" id="category" name="category" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Enter category" required>
+          <label for="category" class="block text-sm font-medium text-gray-700">Kategori: </label>
+          <input type="text" id="category" name="category" class="mt-1 block w-full border border-gray-300 rounded-md p-2 hover:border-indigo-700" placeholder="Masukkan Kategori" required>
         </div>
       </form>
     </div>
     <div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
-      <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg" id="cancelButton">Cancel</button>
-      <button type="submit" id="submitProduct" form="productForm" class="bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg">Save</button>
+      <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg" id="cancelButton">Batal</button>
+      <button type="submit" id="submitProduct" form="productForm" class="bg-indigo-700 hover:bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg">Simpan</button>
     </div>
   </div>
 </div>
 
 <script>
+    document.getElementById("sortDropdown").addEventListener("change", function() {
+    refreshProduct();
+    });
+    document.getElementById("categoryDropdown").addEventListener("change", function() {
+    refreshProduct();
+    });
+
     async function getProduct() {
         return fetch("{% url 'adminview:show_json' %}").then((res) => res.json())
     }
 
     async function refreshProduct() {
-        document.getElementById("product_cards").innerHTML = "";
-        const productEntries = await getProduct();
-        let htmlString = "";
+      document.getElementById("product_cards").innerHTML = "";
+      const productEntries = await getProduct();
+      let htmlString = "";
 
-      if (productEntries.length === 0) {
+      const sortOption = document.getElementById("sortDropdown").value;
+      const categoryOption = document.getElementById("categoryDropdown").value;
+
+      let filteredEntries = productEntries.filter((item) => {
+          if (categoryOption === "all") return true;
+          return item.fields.category === categoryOption;
+      });
+      
+      filteredEntries.sort((a, b) => {
+        if (sortOption === "ascending") {
+            return a.fields.price - b.fields.price;
+        } else if (sortOption === "descending") {
+            return b.fields.price - a.fields.price;
+        } else if (sortOption === "atoz") {
+            return a.fields.name.localeCompare(b.fields.name);
+        } else if (sortOption === "ztoa") {
+            return b.fields.name.localeCompare(a.fields.name);
+        } else if (sortOption === "newtoold") {
+            return new Date(b.fields.date_created) - new Date(a.fields.date_created);
+        } else {
+            return new Date(a.fields.date_created) - new Date(b.fields.date_created);
+        }
+      });
+
+
+      if (filteredEntries.length === 0) {
           htmlString = `
           <img class="mt-6 w-36" src="{% static 'image/muka-sedih.png' %}" alt="No Products Available" style="margin-left: 362px;">
           <p style="margin-left: 370px">Belum ada produk</p>
@@ -82,15 +132,15 @@
             <table class="min-w-full divide-y divide-gray-200 text-center rounded-lg overflow-hidden">
                 <thead style="background: linear-gradient(153deg, #F09027 12.76%, #8CBEAA 71.77%);">
                     <tr>
-                        <th class="px-6 py-3 text-xs font-medium text-white uppercase tracking-wider">Name</th>
-                        <th class="px-6 py-3 text-xs font-medium text-white uppercase tracking-wider">Price</th>
-                        <th class="px-6 py-3 text-xs font-medium text-white uppercase tracking-wider">Category</th>
-                        <th class="px-6 py-3 text-xs font-medium text-white uppercase tracking-wider">Action</th>
+                        <th class="px-6 py-3 text-xs font-medium text-white uppercase tracking-wider">Nama</th>
+                        <th class="px-6 py-3 text-xs font-medium text-white uppercase tracking-wider">Harga</th>
+                        <th class="px-6 py-3 text-xs font-medium text-white uppercase tracking-wider">Kategori</th>
+                        <th class="px-6 py-3 text-xs font-medium text-white uppercase tracking-wider">Aksi</th>
                     </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
           `;
-          productEntries.forEach((item) => {
+          filteredEntries.forEach((item) => {
               const name = item.fields.name;
               const price = item.fields.price;
               const category = item.fields.category;
