--- a/promo/templates/main_promo.html
+++ b/promo/templates/main_promo.html
@@ -32,7 +32,7 @@
 				<input type="text" name="kode" id="kode" placeholder="Kode" maxlength="15" minlength="4"  class="mt-1 mb-1 rounded-lg p-1 text-s" required>
 			  </div>
 			  <div>
-				<input type="number" step="100" maxlength="8" min=0 name="potongan" id="potongan" placeholder="Rp Potongan" class="mt-1 mb-1 rounded-lg p-1 text-s" oninput="checkLength(this)" required>
+				<input type="number" step="1" maxlength="3" max="100" min=0 name="potongan" id="potongan" placeholder="Potongan%" class="mt-1 mb-1 rounded-lg p-1 text-s w-full" oninput="checkLength(this)" required>
 			  </div>
 			  <div class="inline-flex">
 				<p class="pr-2 text-[#4c3013] font-bold">Kadaluarsa</p>
@@ -78,35 +78,17 @@ async function refreshPromo() {
         $("#promo_cards").html('<p class="text-lg font-semibold text-white col-span-full text-center">Belum ada promo :(</p>');
     } else {
         promos.forEach((promo) => {
-            let potonganValue = promo.fields.potongan / 1000;
+            let potonganValue = promo.fields.potongan;
             let bgColor;
             let textColor = 'text-white';
 
-            if (potonganValue <= 100) {
+            if (potonganValue <= 25) {
                 bgColor = "bg-[#4E9B00]";
-            } else if (potonganValue <= 1000) {
+            } else if (potonganValue <= 75) {
                 bgColor = "bg-[#FF6E20]";
             } else {
                 bgColor = "bg-[#9812FF]";
             }
-			let sufiks = "";
-			let potongan;
-			if (potonganValue >= 1000){
-				sufiks = "jt"
-				potonganValue = parseFloat(promo.fields.potongan) /1000000;
-				potongan = Number.isInteger(potonganValue) ? 
-                       potonganValue.toFixed(0) + sufiks : 
-                       potonganValue.toFixed(2) + sufiks;
-			} else if(potonganValue >= 1){
-				sufiks = "k"
-				potongan = Number.isInteger(potonganValue) ? 
-                       potonganValue.toFixed(0) + sufiks : 
-                       potonganValue.toFixed(1) + sufiks;
-			}
-			if (promo.fields.potongan < 1000) {
-				potongan = promo.fields.potongan;
-				potongan = parseInt(potongan);
-			}
 			
 
             htmlString += `
@@ -118,7 +100,7 @@ async function refreshPromo() {
                         <div class="text-base md:text-lg lg:text-xl">Valid hingga ${promo.fields.tanggal_akhir_berlaku}</div>
                     </div>
                     <div class="flex-[2] ${bgColor} rounded-r-2xl flex items-center justify-center text-3xl md:text-3xl lg:text-3xl ${textColor}">
-                        Rp${potongan}
+                        ${promo.fields.potongan}%
                     </div>
                 </div>
             </a>`;
@@ -159,8 +141,8 @@ function hideModal() {
 }
 
 function checkLength(input) {
-    if (input.value.length > 8) {
-        input.value = input.value.slice(0, 8); 
+    if (input.value.length > 3) {
+        input.value = input.value.slice(0, 2); 
     }
 }
 
