--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,7 +6,7 @@
     <div class="max-w-7xl mx-auto px-4 py-12">
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
         <div class="space-y-4">
-          <h3 class="text-white text-lg font-semibold">Sovita</h3>
+          <h3 class="text-white font-main text-lg font-semibold">Sovita</h3>
           <div class="space-y-3">
             <div class="flex items-center gap-3">
               <MapPin size={20} />
@@ -24,7 +24,7 @@
         </div>
 
         <div class="space-y-4">
-          <h3 class="text-white text-lg font-semibold">Tautan Cepat</h3>
+          <h3 class="text-white font-main text-lg font-semibold">Tautan Cepat</h3>
           <ul class="space-y-2">
             <li><a href="/" class="hover:text-white transition-colors">Tentang</a></li>
             <li><a href="/#fitur" class="hover:text-white transition-colors">Fitur</a></li>
@@ -35,20 +35,20 @@
         </div>
 
         <div class="space-y-4">
-          <h3 class="text-white text-lg font-semibold">Layanan</h3>
+          <h3 class="text-white font-main text-lg font-semibold">Layanan</h3>
           <ul class="space-y-2">
             <li><a href="https://www.instagram.com/wisnu.nugroho13/" class="hover:text-white transition-colors">Kebijakan Pengiriman</a></li>
             <li><a href="https://www.instagram.com/rflsaa/" class="hover:text-white transition-colors">Pengembalian & Penukaran</a></li>
             <li><a href="https://www.instagram.com/arzakaraffan/" class="hover:text-white transition-colors">Pertanyaan Umum</a></li>
             <li><a href="https://www.instagram.com/raihan_mauln" class="hover:text-white transition-colors">Lacak Pesanan</a></li>
             <li><a href="https://www.instagram.com/zufarr.a/" class="hover:text-white transition-colors">Kebijakan Privasi</a></li>
-            <li><a href="https://www.instagram.com/zufarr.a/" class="hover:text-white transition-colors">Terma</a></li>
+            <li><a href="https://www.instagram.com/zufarr.a/" class="hover:text-white transition-colors">Syarat dan Kondisi</a></li>
           </ul>
         </div>
 
         <div class="space-y-4">
-          <h3 class="text-white text-lg font-semibold">Newsletter</h3>
-          <p>Subscribe to receive updates, access to exclusive deals, and more.</p>
+          <h3 class="text-white font-main font-bold text-lg font-semibold">Kabar</h3>
+          <p>Berlangganan untuk mendapat berita terbaru.</p>
           <div class="flex gap-2">
             <input
               type="email"
