menambah button review pada view product

--- a/display/templates/view_product.html
+++ b/display/templates/view_product.html
@@ -38,12 +38,11 @@
                   </div>
                 </form>
                 {% endif %}
-                <a href="{% url 'forum:forum_posts' product.id %}" class="block w-max bg-[#f09027] hover:bg-[#b85c2c] text-white font-bold py-2 px-6 rounded-lg transition duration-300 ease-in-out transform">Lihat forum</a>
+                <div class="flex">
+                <a href="{% url 'forum:forum_posts' product.id %}" class="block w-max bg-[#f09027] hover:bg-[#b85c2c] mr-6 text-white font-bold py-2 px-6 rounded-lg transition duration-300 ease-in-out transform">Lihat forum</a>
+                <a href="{% url 'review:show_review' product.id %}" class="block w-max bg-[#f09027] hover:bg-[#b85c2c] text-white font-bold py-2 px-6 rounded-lg transition duration-300 ease-in-out transform">Lihat ulasan</a>
+                </div>
                 {% if user_role %}
-                                <a href="{% url 'review:show_review' product.id %}"
-                                class="block w-max bg-[#f09027] hover:bg-[#b85c2c] text-white font-bold py-2 px-6 rounded-lg transition duration-300 ease-in-out transform">
-                                    Review Page
-                                </a>
                   <button id="wishlist-toggle"
                     class="{% if is_wishlisted %}
                       bg-gradient-to-r from-pink-500 to-red-500
@@ -84,10 +83,6 @@
                     </form>
                   </div>
                 </div>
-                                    <button type="submit"class="bg-[#f09027] hover:bg-[#b85c2c] text-white font-bold py-2 px-6 rounded-lg transition duration-300 ease-in-out transform hover:scale-105"> Add To Cart</button>
-                                    </div>
-                                    
-                            </form>
               </div>
             </div>
           </div>
