feat: adjust ui color and handle empty input ajax

--- a/forum/templates/create_forum_post.html
+++ b/forum/templates/create_forum_post.html
@@ -29,7 +29,7 @@
                                   rows="10">{{ form.content.value|default:'' }}</textarea>
                     </div>
                     <button type="submit"
-                            class="w-full px-4 py-2 text-base font-semibold text-white bg-blue-600 border border-transparent rounded-md shadow-sm hover:bg-blue-700">
+                            class="w-full px-4 py-2 text-base font-semibold text-white bg-[#f09027] hover:bg-[#b85c2c] border border-transparent rounded-md shadow-sm">
                         Create
                     </button>
                 </form>
