--- a/forum/templates/forum_post.html
+++ b/forum/templates/forum_post.html
@@ -29,7 +29,7 @@
                                           class="block w-full px-4 py-3 text-sm border border-gray-200 rounded-lg focus:border-blue-200 focus:ring-blue-200 disabled:opacity-50 disabled:pointer-events-none"></textarea>
                             </div>
                             <button type="submit"
-                                    class="w-full px-3 py-1.5 text-base font-medium text-white bg-blue-500 border border-transparent rounded-md shadow-sm hover:bg-blue-700">
+                                    class="w-full px-3 py-1.5 text-base font-medium text-white bg-[#f09027] hover:bg-[#b85c2c] border border-transparent rounded-md shadow-sm">
                                 Balas
                             </button>
                         </form>
